...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="#FFF" />


    <LinearLayout
        android:id="@+id/watched_folders_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
...
            android:adjustViewBounds="true"
            android:contentDescription="@string/kaguya_sama_o_kawaii_koto"
            android:paddingHorizontal="64dp"
            android:src="@drawable/kaguya_how_cute" />

        <LinearLayout
            android:id="@+id/watched_folders_background_help_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
...
